--- a/header.html
+++ b/header.html
@@ -6,6 +6,7 @@
   		<p>Organize & Manage your MICE smart!</p>
   	</div>
   	<div id="login">
-  		<input class="searchbar" type="search" name="search">
+  		<input type="search" class="searchbar" name="search">
   	</div>
+  	<hr size="1" width="100%"></hr>
 </div>
