--- a/test.html
+++ b/test.html
@@ -6,11 +6,12 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>test</title>
 		<meta name="author" content="lee" />
-		<!-- Date: 2012-08-13 -->
+		<!-- Date: 2012-08-g13 -->
 	</head>
 	<body>
 	test
 	hi
+	end	
 	</body>
 </html>
 
