--- a/header2.html
+++ b/header2.html
@@ -1,17 +1,14 @@
-<link href="layout.css "rel="stylesheet" type="text/css"> <!-- -->
+<link href="header.css "rel="stylesheet" type="text/css">
 
 <div id="header">
-	<div id="title">
+	<div class="title2">
   		<h2>MICE Star</h2>
   		<p>Organize & Manage your MICE smart!</p>
   	</div>
-  	<div id="searchbar">
-  		<input class="searchbar" type="search" name="search">
-  	</div>
-  	<div id="login_window">
-  		<p>Welcome Bobby Kim<br>Messages | Settings | Sign Out</p>
-  	</div>
-  	<hr size="2" width="1000px"></hr>
+  	<input type="search" class="searchbar2" name="search">
+  	<p class="login_window2">Welcome Bobby Kim<br>Messages | Settings | Sign Out</p>
+  	<br><br>
+  	<hr size="2" width="100%"></hr>
   	<table class="menubar2" frame="void">
 		<tr>
 			<td><input type="button" value="News" class="menubar2_button" style="background-color:red"> </td>
@@ -27,4 +24,5 @@
 			<td><input type="button" value="Destination" class="menubar2_button" style="background-color:red"></td>
 		</tr>
 	</table>
+  	<hr size="2" width="100%"></hr>
 </div>
