--- a/menubar.html
+++ b/menubar.html
@@ -31,5 +31,5 @@
 		</tr>
 	</table>
 	<hr size="2" width="1000px">
-	<p>Profile creation <progress value="22" max="100" style="float:right;"></progress><br></p><br>
+	<p class="menubar_progress">Profile creation <progress value="22" max="100"></progress></p><br>
 </div>
